force-app/main/default/objects/Turn__c/fields/Discarded__c.field-meta.xml
<CustomField>
    <fullName>Discarded__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discarded</label>
    <referenceTo>GameCard__c</referenceTo>
    <relationshipLabel>Discarded Turns</relationshipLabel>
    <relationshipName>DiscardedTurns</relationshipName>
    <type>Lookup</type>
</CustomField>