force-app/main/default/objects/Turn__c/fields/Drawn__c.field-meta.xml
<CustomField>
    <fullName>Drawn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drawn</label>
    <referenceTo>GameCard__c</referenceTo>
    <relationshipLabel>Drawn Turns</relationshipLabel>
    <relationshipName>DrawnTurns</relationshipName>
    <type>Lookup</type>
</CustomField>