force-app/main/default/objects/Turn__c/fields/DrawnCount__c.field-meta.xml
<CustomField>
    <fullName>DrawnCount__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Drawn Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>